# crispy-guacamole-env-windows

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  editor.bat  game.bat  generate-project-vs2017.bat  generate-project-vs2019.bat  generate-project-vs2022.bat  install.bat  project.bat  update.bat  update.py
lib/: lua5.2.lib  lua5.3.lib
locked-lua5.3/: lua5.3.exp  lua5.3.iobj  lua5.3.ipdb  lua5.3.lib
